Add readme and license to PyPi tarball

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,3 +1,5 @@
+include README.rst
+include LICENSE.txt
 include fritzconnection/*.py
 include fritzconnection/test_xml/*
 include pypi_description.rst
