Add pytest configuration and tox environments.

--- a/tox.ini
+++ b/tox.ini
@@ -1,7 +1,18 @@
 [tox]
 skip_missing_interpreters = True
 envlist =
+    py36
+    py37
+    py38
     doc
+
+
+[testenv]
+passenv = LANG
+deps = pytest
+
+commands = {envbindir}/pytest {posargs}
+
 
 [testenv:doc]
 changedir = docs
