Add tox env for coverage

--- a/tox.ini
+++ b/tox.ini
@@ -24,3 +24,14 @@ deps =
 
 commands =
     sphinx-build -qb html -d {envtmpdir}/doctrees . {envtmpdir}/html
+
+
+[testenv:cov]
+passenv = COVERALLS_REPO_TOKEN GIT_*
+deps =
+    {[testenv]deps}
+    pytest-cov
+    coveralls
+commands =
+    pytest -qq --cov=fritzconnection --cov-report=term-missing
+#    coveralls
