--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-
 *.pyc
 .DS_Store
 __pycache__/*
@@ -6,3 +5,7 @@ build/*
 dist/*
 fritzconnection.egg-info/*
 *.ipynb*
+.coverage
+.pytest*
+.tox/
+.vscode/
