prepared tests for qr-code creation

--- a/tox.ini
+++ b/tox.ini
@@ -11,9 +11,32 @@ envlist =
 
 [testenv]
 passenv = LANG
-deps = pytest
+deps =
+    pytest
+;     segno
+;     opencv-python-headless
+    
+commands = {envbindir}/pytest -n 4 {posargs}
 
-commands = {envbindir}/pytest {posargs}
+
+[testenv:py38]
+deps = 
+    pytest
+    segno
+    opencv-python-headless
+
+[testenv:py39]
+deps = 
+    pytest
+    segno
+    opencv-python-headless
+
+[testenv:py310]
+deps = 
+    pytest
+    segno
+    opencv-python-headless
+
 
 
 [testenv:doc]
