tox: wrong cli flag removed

--- a/tox.ini
+++ b/tox.ini
@@ -16,7 +16,7 @@ deps =
 ;     segno
 ;     opencv-python-headless
     
-commands = {envbindir}/pytest -n 4 {posargs}
+commands = {envbindir}/pytest {posargs}
 
 
 [testenv:py38]
