--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -29,8 +29,8 @@ jobs:
       - name: Tests
         run: pytest
 
-  cov_docs:
-    name: Coverage and Doc tests
+  docs:
+    name: Build docs
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@master
@@ -41,7 +41,26 @@ jobs:
           python-version: "3.10"
 
       - name: Install dependencies
-        run: pip install -r requirements_test.txt
+        run: pip install sphinx sphinx_rtd_theme
+
+      - name: Build docs
+        run: |
+            cd docs
+            sphinx-build -qb html -d /tmp/doctrees . /tmp/html
+
+  coverage:
+    name: Coverage
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@master
+
+      - name: Set up Python ${{ matrix.python-version }}
+        uses: actions/setup-python@v2
+        with:
+          python-version: "3.10"
+
+      - name: Install dependencies
+        run: pip install pytest pytest-cov coveralls
 
       - name: Test
-        run: tox -e doc,cov
+        run: pytest -qq --cov=fritzconnection --cov-report=term-missing
