--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -41,7 +41,9 @@ jobs:
           python-version: "3.10"
 
       - name: Install dependencies
-        run: pip install sphinx sphinx_rtd_theme
+        run: |
+            pip install sphinx sphinx_rtd_theme
+            pip install .
 
       - name: Build docs
         run: |
