Tests extended for Python 3.11

--- a/tox.ini
+++ b/tox.ini
@@ -6,6 +6,7 @@ envlist =
     py38
     py39
     py310
+    py311
     doc
 
 
@@ -15,24 +16,30 @@ deps =
     pytest
 ;     segno
 ;     opencv-python-headless
-    
+
 commands = {envbindir}/pytest {posargs}
 
 
 [testenv:py38]
-deps = 
+deps =
     pytest
     segno
     opencv-python-headless
 
 [testenv:py39]
-deps = 
+deps =
     pytest
     segno
     opencv-python-headless
 
 [testenv:py310]
-deps = 
+deps =
+    pytest
+    segno
+    opencv-python-headless
+
+[testenv:py311]
+deps =
     pytest
     segno
     opencv-python-headless
