--- a/tox.ini
+++ b/tox.ini
@@ -7,6 +7,7 @@ envlist =
     py39
     py310
     py311
+    py312
     doc
 
 
@@ -43,6 +44,12 @@ deps =
     pytest
     segno
     opencv-python-headless
+
+[testenv:py312]
+deps =
+    pytest
+    segno
+;    opencv-python-headless  ; needs distutils removed from Python 3.12
 
 
 
