--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -8,6 +8,8 @@ alabaster==0.7.13
     # via sphinx
 babel==2.12.1
     # via sphinx
+beautifulsoup4==4.12.2
+    # via furo
 certifi==2023.7.22
     # via requests
 charset-normalizer==3.2.0
@@ -17,6 +19,8 @@ docutils==0.18.1
     #   sphinx
     #   sphinx-rtd-theme
 fritzconnection==1.13.0
+    # via -r docs/requirements.in
+furo==2023.3.27
     # via -r docs/requirements.in
 idna==3.4
     # via requests
@@ -29,16 +33,22 @@ markupsafe==2.1.3
 packaging==23.1
     # via sphinx
 pygments==2.16.1
-    # via sphinx
+    # via
+    #   furo
+    #   sphinx
 requests==2.31.0
     # via
     #   fritzconnection
     #   sphinx
 snowballstemmer==2.2.0
     # via sphinx
+soupsieve==2.4.1
+    # via beautifulsoup4
 sphinx==5.1.1
     # via
     #   -r docs/requirements.in
+    #   furo
+    #   sphinx-basic-ng
     #   sphinx-rtd-theme
     #   sphinxcontrib-applehelp
     #   sphinxcontrib-devhelp
@@ -46,6 +56,8 @@ sphinx==5.1.1
     #   sphinxcontrib-jquery
     #   sphinxcontrib-qthelp
     #   sphinxcontrib-serializinghtml
+sphinx-basic-ng==1.0.0b2
+    # via furo
 sphinx-rtd-theme==1.2.2
     # via -r docs/requirements.in
 sphinxcontrib-applehelp==1.0.7
